chore: documentation for trip creation
